HouseHogPackage/main/default/objects/Banker__c/Banker__c.object-meta.xml
<CustomObject>
    <description>Proxy object for banker users.</description>
    <label>Banker</label>
    <nameField>
        <displayFormat>Banker-{00000}</displayFormat>
        <label>Banker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bankers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>