HouseHogPackage/main/default/objects/Banker__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Bank that the banker is affiliated with.</description>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Bankers</relationshipLabel>
    <relationshipName>Bankers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>