HouseHogPackage/main/default/objects/Banker__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Owner:User.FirstName   &amp;  &quot; &quot;  &amp;  Owner:User.LastName</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>