HouseHogPackage/main/default/objects/Banker__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Banker&apos;s primary phone number.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>