HouseHogPackage/main/default/objects/Banker__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User represented by the proxy Banker.</description>
    <label>Related User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.User_Category__c</field>
            <operation>equals</operation>
            <value>Banker</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Bankers</relationshipName>
    <type>Lookup</type>
</CustomField>